--- a/p2-6-string-data.ipynb
+++ b/p2-6-string-data.ipynb
@@ -79,11 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "n = 440312\n",
+    "f = 3.1415926\n",
+    "\n",
+    "s1 = f\"{n}\"\n",
+    "s2 = f\"{f}\""
    ]
   },
   {
@@ -95,29 +99,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "440312"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "int(s1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "440312.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "float(s1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1415926"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "float(s2)\n",
+    "# int(s2)"
    ]
   },
   {
@@ -131,20 +169,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "int(float(s2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "s3 = \"440abc312\"\n",
+    "s4 = \"3.1415g26\""
    ]
   },
   {
@@ -163,11 +213,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def is_float(s):\n",
+    "    try:\n",
+    "        float(s)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "    \n",
+    "def is_int(s):\n",
+    "    try:\n",
+    "        int(s)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "    \n",
+    "def parse_str(s):\n",
+    "    if is_int(s):\n",
+    "        print(f\"The input is an integer,It's value is {int(s)}.\")\n",
+    "    elif is_float(s):\n",
+    "        print(f\"The input is an float,It's value is {float(s)}.\")\n",
+    "    else:\n",
+    "        print(f\"The input “{s}” is not a digital.\")"
    ]
   },
   {
@@ -181,38 +251,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input is an integer,It's value is 440312.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input is an float,It's value is 3.1415926.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input “440abc312” is not a digital.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The input “3.1415g26” is not a digital.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s4)"
    ]
   },
   {
@@ -233,29 +335,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from fastnumbers import fast_float\n",
+    "\n",
+    "fast_float('56.07')\n",
+    "fast_float('bad input')\n",
+    "fast_float('bad input',default = 0)\n",
+    "fast_float('bad input',0)\n",
+    "fast_float(54)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "fast_float('Ⅴ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "fast_float('⑤')"
    ]
   },
   {
@@ -296,11 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from datetime import datetime\n",
+    "\n",
+    "t = datetime.now()"
    ]
   },
   {
@@ -312,11 +455,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-01-13 16:09:43.781760\n",
+      "2020\n",
+      "1\n",
+      "13\n",
+      "16\n",
+      "9\n",
+      "43\n",
+      "781760\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(t)\n",
+    "print(t.year)\n",
+    "print(t.month)\n",
+    "print(t.day)\n",
+    "print(t.hour)\n",
+    "print(t.minute)\n",
+    "print(t.second)\n",
+    "print(t.microsecond)\n",
+    "print(t.tzinfo)"
    ]
   },
   {
@@ -328,11 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-01-13 16:09:49.124522+08:00\n",
+      "China Standard Time\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t = datetime.now().astimezone()\n",
+    "\n",
+    "print(t)\n",
+    "print(t.tzinfo)"
    ]
   },
   {
@@ -351,11 +530,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "年： 2020\n",
+      "月： 01\n",
+      "日： 13\n",
+      "完整日期： 2020-01-13\n",
+      "24小时制时间： 08:43:19\n",
+      "12小时制时间： 08:43:19 AM\n",
+      "日期加时间： 2020-01-13 08:43:19\n",
+      "日期星期加时间： 2020-01-13 Mon 08:43:19\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"年：\",t.strftime(\"%Y\"))\n",
+    "print(\"月：\",t.strftime(\"%m\"))\n",
+    "print(\"日：\",t.strftime(\"%d\"))\n",
+    "print(\"完整日期：\",t.strftime(\"%Y-%m-%d\"))\n",
+    "# print(\"压缩版日期：\",t.strftime(\"%Y-%-m-%-d\"))\n",
+    "print(\"24小时制时间：\",t.strftime(\"%H:%M:%S\"))\n",
+    "print(\"12小时制时间：\",t.strftime(\"%I:%M:%S %p\"))\n",
+    "print(\"日期加时间：\",t.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "print(\"日期星期加时间：\",t.strftime(\"%Y-%m-%d %a %H:%M:%S\"))"
    ]
   },
   {
@@ -369,11 +571,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020年01月13日 16时09分\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import locale\n",
+    "locale.setlocale(locale.LC_CTYPE,'chinese')\n",
+    "print(t.strftime(\"%Y年%m月%d日 %H时%M分\"))"
    ]
   },
   {
@@ -399,20 +611,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'> 2019-07-17 12:09:13\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s1 = \"2019-7-17 Wed 12:09:13\"\n",
+    "t1 = datetime.strptime(s1,\"%Y-%m-%d %a %H:%M:%S\")\n",
+    "print(type(t1),t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'> 2019-07-17 12:09:00\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s2 = \"2019年07月17日 12时9分\"\n",
+    "t2 = datetime.strptime(s2,\"%Y年%m月%d日 %H时%M分\")\n",
+    "print(type(t2),t2)"
    ]
   },
   {
@@ -435,29 +667,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "t = datetime.now().astimezone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "2020-01-13T17:04:51.729716+08:00\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "iso_str = t.isoformat()\n",
+    "print(type(iso_str))\n",
+    "print(iso_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'> 2020-01-13 17:04:51.729716+08:00\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t_from_iso_str = datetime.fromisoformat(iso_str)\n",
+    "print(type(t_from_iso_str),t_from_iso_str)"
    ]
   },
   {
@@ -518,20 +770,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def is_valid_cellphone(s):\n",
+    "    pattern = re.compile(r'^[1]([3-9])[0-9]{9}$')\n",
+    "    if pattern.match(s):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
@@ -553,20 +810,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_cellphone('13912345678')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_cellphone('2345678')"
    ]
   },
   {
@@ -619,29 +898,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def is_valid_email(s):\n",
+    "    pattern = re.compile(r'^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$')\n",
+    "    if pattern.match(s):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_email(\"new2@cool.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_email(\"new@cool\")"
    ]
   },
   {
@@ -653,11 +959,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "while True:\n",
+    "    email = input(\"please input your email.\")\n",
+    "    if is_valid_email(email):\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"It's not a valid Email address.Please try again.\")\n",
+    "        \n",
+    "print(f'Your Email address is \\'{email}\\'.')"
    ]
   },
   {
@@ -701,7 +1014,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
