--- a/p2-7-iterable-iterator.ipynb
+++ b/p2-7-iterable-iterator.ipynb
@@ -32,11 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for i in [1,2,3]:\n",
+    "    print(i)"
    ]
   },
   {
@@ -116,29 +127,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "class square:\n",
+    "    # 实例变量 self.base 用来记录当前平方数的基数，这个平方数应该从 1 开始逐渐递增。\n",
+    "    # 然后定义了三个标准方法：\n",
+    "    # __init__() 把 self.base 设置为初始值 0；\n",
+    "    # __iter__() 返回一个 Iterator，这里就是自己，我们直接返回 self；\n",
+    "    # __next__() 是 Iterator 的主方法，这里我们先把 self.base 加 1，然后返回它的平方，由于初始值为 0，第一次调用返回的是 1 的平方。\n",
+    "    def __init__(self):\n",
+    "        self.base = 0\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    def __next__(self):\n",
+    "        self.base += 1\n",
+    "        return self.base**2\n",
+    "    next = __next__\n",
+    "    \n",
+    "iter = square()\n",
+    "iter.next()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "iter.next()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "iter.next()"
    ]
   },
   {
@@ -150,11 +210,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class square:\n",
+    "    \n",
+    "    def __init__(self,high):\n",
+    "        self.base = 0\n",
+    "        self.high = high\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.base += 1\n",
+    "        if self.base > self.high:\n",
+    "            raise StopIteration\n",
+    "        else:            \n",
+    "            return self.base**2\n",
+    "    \n",
+    "    next = __next__\n",
+    "\n",
+    "iter = square(3)"
    ]
   },
   {
@@ -166,11 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for n in square(3):\n",
+    "    print(n)"
    ]
   },
   {
@@ -191,11 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class fib:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.prev = 0\n",
+    "        self.curr = 1\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.prev,self.curr = self.curr,self.prev+self.curr\n",
+    "        return self.prev"
    ]
   },
   {
@@ -215,11 +315,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from itertools import islice\n",
+    "\n",
+    "f = fib()\n",
+    "for n in islice(f,0,10):\n",
+    "    print(n)"
    ]
   },
   {
@@ -231,11 +352,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Red', 'Yellow', 'Green', 'Red', 'Yellow', 'Green', 'Red', 'Yellow']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from itertools import cycle\n",
+    "\n",
+    "colors = cycle(['Red','Yellow','Green'])\n",
+    "\n",
+    "list(islice(colors,0,8))"
    ]
   },
   {
@@ -261,20 +397,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5, 8, 13, 21, 34, 55]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def fib():\n",
+    "    \n",
+    "    prev = 0\n",
+    "    curr = 1\n",
+    "    \n",
+    "    while True:\n",
+    "        yield curr\n",
+    "        prev,curr = curr,prev+curr\n",
+    "        \n",
+    "f = fib()\n",
+    "list(islice(f,0,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "next(f)"
    ]
   },
   {
@@ -325,11 +493,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from math import sqrt\n",
+    "class primes:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.next = 2\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def is_prime(self,n):\n",
+    "        if n < 2:\n",
+    "            return False\n",
+    "\n",
+    "        if n in(2,3):\n",
+    "            return True\n",
+    "\n",
+    "        for i in (2,sqrt(n)+1):\n",
+    "            if n % i == 0:\n",
+    "                return False\n",
+    "\n",
+    "        return True\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        n = self.next\n",
+    "        while not self.is_prime(n):\n",
+    "            n += 1\n",
+    "        \n",
+    "        self.next = n + 1\n",
+    "        return n\n",
+    "    \n",
+    "list(islice(primes(),0,10))"
    ]
   },
   {
@@ -345,21 +554,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function setdefault:\n",
+      "\n",
+      "setdefault(key, default=None, /) method of builtins.dict instance\n",
+      "    Insert key with a value of default if key is not in the dictionary.\n",
+      "    \n",
+      "    Return the value for key if key is in the dictionary, else default.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
@@ -378,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
