solving error about pull aborting.

--- a/p2-a-tree.ipynb
+++ b/p2-a-tree.ipynb
@@ -132,11 +132,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class TreeNode:\n",
+    "    def __init__(self,name='root',data=None,parent=None,children=None):\n",
+    "        self.name = name\n",
+    "        self.data = data\n",
+    "        \n",
+    "        if parent:\n",
+    "            assert isinstance(parent,TreeNode)\n",
+    "            parent.add_child(self)\n",
+    "        self.parent = parent\n",
+    "        \n",
+    "        self.children = []\n",
+    "        if children:\n",
+    "            for child in children:\n",
+    "                self.add_child(child)\n",
+    "            \n",
+    "    def add_child(self,node):\n",
+    "        assert isinstance(node,TreeNode)\n",
+    "        node.parent = self\n",
+    "        self.children.append(node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = TreeNode()\n",
+    "a = TreeNode(name='A',parent=root)\n",
+    "a1 = TreeNode(name='A1',parent=a)\n",
+    "a2 = TreeNode(name='A2',parent=a)\n",
+    "a21 = TreeNode(name='A21')\n",
+    "a22 = TreeNode(name='A22')\n",
+    "a2.add_child(a21)\n",
+    "a2.add_child(a22)\n",
+    "b = TreeNode(name='B',parent=root)\n",
+    "b1 = TreeNode(name='B1',parent=b)\n",
+    "c = TreeNode(name='C',parent=root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _print_tree(root,_prefix='',_last=True):\n",
+    "    print(_prefix,'└── ' if _last else '├── ',root.name,sep='')\n",
+    "    _prefix += '    ' if _last else '|   '\n",
+    "    count = len(root.children)\n",
+    "    for n,node in enumerate(root.children):            \n",
+    "        _last = n == (count-1)\n",
+    "        _print_tree(node,_prefix,_last)\n",
+    "        \n",
+    "def print_tree(root):\n",
+    "    print(root.name)\n",
+    "    if root.children:\n",
+    "        for n,node in enumerate(root.children):\n",
+    "            _print_tree(node,_last=False if n != (len(root.children)-1) else True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      "├── A\n",
+      "|   ├── A1\n",
+      "|   └── A2\n",
+      "|       ├── A21\n",
+      "|       └── A22\n",
+      "├── B\n",
+      "|   └── B1\n",
+      "└── C\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_tree(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Papi\n",
+      "Dick\n",
+      "Kawasaki\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = ['Papi','Dick','Kawasaki']\n",
+    "print('\\n'.join(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      "├── A\n",
+      "|   ├── A1\n",
+      "|   └── A2\n",
+      "|       ├── A21\n",
+      "|       └── A22\n",
+      "├── B\n",
+      "|   └── B1\n",
+      "└── C\n"
+     ]
+    }
+   ],
+   "source": [
+    "class TreeNode:\n",
+    "    def __init__(self, name='root', data=None, parent=None,children=None):\n",
+    "        self.name = name\n",
+    "        self.data = data\n",
+    "        \n",
+    "        if parent:\n",
+    "            assert isinstance(parent,TreeNode)\n",
+    "            parent.add_child(self)\n",
+    "        self.parent = parent\n",
+    "            \n",
+    "        self.children = []    \n",
+    "        if children:\n",
+    "            for child in children:\n",
+    "                self.children.append(child)   \n",
+    "    \n",
+    "    def add_child(self,node):\n",
+    "        assert isinstance(node,TreeNode)\n",
+    "        node.parent = self\n",
+    "        self.children.append(node)\n",
+    "    \n",
+    "    def _to_strings(self, xs, _prefix='', _last=True):\n",
+    "        xs.append(''.join([_prefix,'└── ' if _last else '├── ', self.name]))\n",
+    "        _prefix += '    ' if _last else '|   '\n",
+    "        \n",
+    "        count = len(self.children)\n",
+    "        for n,node in enumerate(self.children):\n",
+    "            _last = n == (count - 1)\n",
+    "            node._to_strings(xs,_prefix,_last)\n",
+    "            \n",
+    "    def __repr__(self):\n",
+    "        xs = [self.name]\n",
+    "        for node in self.children[:-1]:\n",
+    "            node._to_strings(xs,_last = False)\n",
+    "        self.children[-1]._to_strings(xs,_last=True)\n",
+    "        return '\\n'.join(xs)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.__repr__()\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    root = TreeNode()\n",
+    "    a = TreeNode(name='A',parent=root)\n",
+    "    a1 = TreeNode(name='A1',parent=a)\n",
+    "    a2 = TreeNode(name='A2',parent=a)\n",
+    "    a21 = TreeNode(name='A21')\n",
+    "    a22 = TreeNode(name='A22')\n",
+    "    a2.add_child(a21)\n",
+    "    a2.add_child(a22)\n",
+    "    b = TreeNode(name='B',parent=root)\n",
+    "    b1 = TreeNode(name='B1',parent=b)\n",
+    "    c = TreeNode(name='C',parent=root)\n",
+    "    \n",
+    "    print(root)"
    ]
   },
   {
